--- a/lib/ecommercewebsite_web/live/shop_live/shop_live.html.heex
+++ b/lib/ecommercewebsite_web/live/shop_live/shop_live.html.heex
@@ -83,7 +83,7 @@
 
         <div class = "w-4/5">
         <div class = "w-full justify-center flex break-all" >
-            <h1 class = "w-full flex text-white font-semibold font-mono text-8xl justify-center items-center align-middle text-center mt-64">
+            <h1 class = "w-full max-w-lg flex text-white font-semibold font-mono text-8xl justify-center items-center align-middle text-center mt-64">
             <%= @shop_title %>
             </h1>
         </div>
@@ -100,7 +100,7 @@
         </div>
 
         <div class = "w-full justify-center flex break-all" >
-            <h2 class = "w-full flex text-white font-semibold font-sans text-5xl justify-center items-center align-middle text-center mt-64">
+            <h2 class = "w-full max-w-6xl flex text-white font-semibold font-sans text-5xl justify-center items-center align-middle text-center mt-64">
             <%= @shop_description %>
             </h2>
         </div>
