--- a/lib/ecommercewebsite_web/live/shop_live/shop_live.html.heex
+++ b/lib/ecommercewebsite_web/live/shop_live/shop_live.html.heex
@@ -82,7 +82,7 @@
         </div>
 
         <div class = "w-4/5">
-        <div class = "w-full justify-center flex break-all" >
+        <div class = "w-full justify-center flex break-words" >
             <h1 class = "w-full max-w-lg flex text-white font-semibold font-mono text-8xl justify-center items-center align-middle text-center mt-64">
             <%= @shop_title %>
             </h1>
@@ -99,7 +99,7 @@
             <% end %>
         </div>
 
-        <div class = "w-full justify-center flex break-all" >
+        <div class = "w-full justify-center flex break-words" >
             <h2 class = "w-full max-w-6xl flex text-white font-semibold font-sans text-5xl justify-center items-center align-middle text-center mt-64">
             <%= @shop_description %>
             </h2>
